<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/activity_default_margin"
        android:paddingTop="@dimen/top_margin"
        android:paddingEnd="@dimen/activity_default_margin">

        <TableLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_background"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/server"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gradle_server_type"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/debug_mode"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gradle_debug_mode"
                    android:textSize="15sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/country_select_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/country_global_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country_global"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/country_us_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country_us"
                    android:textAlignment="textStart" />

                <RadioButton
                    android:id="@+id/country_kr_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/country_kr"
                    android:textAlignment="textStart" />
            </RadioGroup>

            <TextView
                android:id="@+id/call_get_samsung_pay_first_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/row_margin"
                android:text="@string/call_get_samsung_pay_first" />
        </TableLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/basic_buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/get_samsung_pay_status_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/get_samsung_pay_status" />

                    <Button
                        android:id="@+id/activate_samsung_pay_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activate_samsung_pay" />

                    <Button
                        android:id="@+id/go_to_update_page_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/go_to_update_page" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/dynamic_buttons_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/common_buttons_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/get_all_cards_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_all_cards" />

                        <Button
                            android:id="@+id/add_card_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_card" />

                        <Button
                            android:id="@+id/start_simple_pay_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_simple_pay" />

                        <Button
                            android:id="@+id/start_deep_link"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_deep_link" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/global_us_buttons_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/verify_card_idv_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/verify_card_idv" />

                        <Button
                            android:id="@+id/update_additional_service_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update_additional_service" />

                        <Button
                            android:id="@+id/update_card_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/update_card" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/korea_buttons_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/start_simple_pay_for_refund_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_simple_pay_for_refund" />

                        <Button
                            android:id="@+id/start_mst_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/start_mst" />

                        <Button
                            android:id="@+id/transit_card_status_button"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/get_samsung_pay_transit_status" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>