<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_default_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/activity_default_margin"
        android:orientation="vertical"
        tools:ignore="LabelFor">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_margin"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_id"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/card_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_default_margin"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/card_link_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/extra_issuer_app_card_linked"
                android:textOff="@string/unlink"
                android:textOn="@string/link"
                android:textSize="12sp" />
        </TableRow>

        <Button
            android:id="@+id/update_card_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_card"
            android:visibility="visible" />
    </TableLayout>
</layout>