<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_last_4_dpan" />

            <TextView
                android:id="@+id/card_last_4_dpan"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/card_last_4_fpan" />

            <TextView
                android:id="@+id/card_last_4_fpan"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="8.5"
                android:text="@string/card_id" />

            <TextView
                android:id="@+id/value_card_id"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/card_brand" />

            <TextView
                android:id="@+id/value_card_brand"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/card_issuer" />

            <TextView
                android:id="@+id/value_card_issuer"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/card_type" />

            <TextView
                android:id="@+id/value_card_type"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/card_status" />

            <TextView
                android:id="@+id/value_status"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/is_samsung_pay_card" />

            <TextView
                android:id="@+id/value_is_samsung_pay_card"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center" />
        </TableRow>
    </LinearLayout>
</layout>